--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
 	"require" : {
 		"php": "^7.1",
 		"fig/http-message-util": "^1.1.2",
+		"filp/whoops": "^2.2",
 		"psr/container": "^1.0",
 		"psr/http-message": "^1.0.1",
 		"psr/http-server-middleware": "^1.0",
@@ -24,26 +25,26 @@
 		"qbonaventure/discord-model": "dev-master",
 		"zendframework/zend-auradi-config": "^1.0",
 		"zendframework/zend-config-aggregator": "^1.1",
+		"zendframework/zend-diactoros": "^1.7.1",
 		"zendframework/zend-expressive": "^3.0.1",
+		"zendframework/zend-expressive-aurarouter": "^3.0",
+		"zendframework/zend-expressive-fastroute": "^3.0",
 		"zendframework/zend-expressive-platesrenderer": "^2.0",
 		"zendframework/zend-expressive-router": "^3.0",
 		"zendframework/zend-expressive-template": "^2.0",
+		"zendframework/zend-expressive-zendrouter": "^3.0",
 		"zendframework/zend-httphandlerrunner": "^1.0.1",
+		"zendframework/zend-servicemanager": "^2.7.8 || ^3.3",
 		"zendframework/zend-stratigility": "^3.0"
 	},
 	"require-dev" : {
-		"filp/whoops" : "^1.1.10 || ^2.1.13",
-		"malukenho/docheader" : "^0.1.6",
-		"mockery/mockery" : "^1.0",
-		"phpstan/phpstan" : "^0.9.2",
-		"phpstan/phpstan-strict-rules" : "^0.9",
-		"phpunit/phpunit" : "^7.0.1",
-		"zendframework/zend-coding-standard" : "~1.0.0",
-		"zendframework/zend-diactoros" : "^1.7.1",
-		"zendframework/zend-expressive-aurarouter" : "^3.0",
-		"zendframework/zend-expressive-fastroute" : "^3.0",
-		"zendframework/zend-expressive-zendrouter" : "^3.0",
-		"zendframework/zend-servicemanager" : "^2.7.8 || ^3.3"
+		"malukenho/docheader": "^0.1.6",
+		"mockery/mockery": "^1.0",
+		"phpstan/phpstan": "^0.9.2",
+		"phpstan/phpstan-strict-rules": "^0.9",
+		"phpunit/phpunit": "^7.0.1",
+		"zendframework/zend-coding-standard": "~1.0.0",
+		"zendframework/zend-expressive-tooling": "^1.0"
 	},
 	"conflict" : {
 		"container-interop/container-interop" : "<1.2.0",
